# david_training

./: .gitignore  david_training.code-workspace
IAI/: T1-2.cpp
Prepare/: a.txt  b.txt  c.txt  prepare.code-workspace
Prepare/Graph_Theory/: LG-P4779.cpp
USACO/2020-12/: Q1-ABCs.cpp  Q2-Chains.cpp  Q3-stuck-err.cpp
codeforces/src/: 1553D.cpp  CF1570A.cpp  CF409H.cpp  CF4A.cpp
contest/ACSL/: 2022-IR3.cpp
contest/IAI/: T1.cpp  david-IAI.code-workspace
contest/lanqiao/: print.cpp  season.cpp  triangle.cpp
data_structures/string/: str-1.cpp
gao/: gao.code-workspace
gao/standard/: U1_链表.md  U2_栈.md  U3_队列.md  U4-树1.md  U6-堆1.md
gao/test/: MOD-DIV.cpp  and.cpp  readme.txt  test--1.cpp  test-2.cpp  test.cpp  test002.cpp  time.cpp  你好.cpp
leetcode/: CMakeLists.txt  readme.md
leetcode/leetcode-Offer/: CMakeLists.txt
leetcode/leetcode-Standard/: ._leetcode-STANDARD.code-workspace  CMakeLists.txt  leetcode-STANDARD.code-workspace
leetcode/src/: CMakeLists.txt  Q15_3Sum.h  Q16_3Sum_closest.h  Q17.h  Q21_MergeTwoList.h  Q22.h  Q22_Parenthesis.h  Q26.h  Q27_RemoveNumber.h  Q38_CounterAndSay.h  Q50.h
leetcode/test/: CMakeLists.txt  Q16_UT.cpp  Q17_UT.cpp  Q21_UT.cpp  Q22_Parenthesis.cpp  Q26_UT.cpp  Q27_UT.cpp  Q38_UT.cpp
luogu/: P1055  P1055.cpp  P1093.cpp  P1996.cpp  tempCodeRunnerFile.cpp
luogu/src/: P1030.cpp  P1087.cpp  P1113.cpp  P1886.cpp  P1996_2.cpp  P1996_3.cpp  P2168.cpp  P2168_2.cpp  P2947.cpp  P3375.cpp  (+16 more)
reserveforce/: reserveforce.code-workspace
sng/: david-sng.code-workspace
test/: .gitignore  class.cpp  david_test.code-workspace
(+725 files in other folders)
